--- a/E3-E4/fastapi/templates/base.html
+++ b/E3-E4/fastapi/templates/base.html
@@ -35,6 +35,7 @@
                     <div class="nav-links-container">
                         {% if user %}
                         <!-- Liens pour utilisateurs authentifiés -->
+                        {% if not user.is_staff and not user.is_superuser %}
                         <a
                             href="/chat"
                             class="{% if request.url.path == '/chat' %}active{% endif %}"
@@ -42,8 +43,14 @@
                             <i class="fas fa-comments"></i
                             ><span>Chat OpenAI</span>
                         </a>
-
-                        {% if user.is_staff or user.is_superuser %}
+                        {% endif %} {% if user.is_staff or user.is_superuser %}
+                        <a
+                            href="/dashboard"
+                            class="{% if request.url.path == '/dashboard' %}active{% endif %}"
+                        >
+                            <i class="fas fa-chart-line"></i
+                            ><span>Dashboard</span>
+                        </a>
                         <a
                             href="/conversations"
                             class="{% if request.url.path == '/conversations' %}active{% endif %}"
